# gpconnect

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  tcp.rs  udp.rs
src/core/: config.rs
src/gp/: getconfig.rs  login.rs  mod.rs
src/libs/: cbc.rs  esp.rs  gpst.rs  hmacsha1.rs  mod.rs  udp.rs
src/utils/: logging.rs
