[package]
name = "gpconnect"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
sha1 = "0.10.6"
hmac = "0.12.0"
libaes = "0.7.0"
pnet = "0.35.0"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4"
reqwest = { version = "0.12.8", features = ["json"] }
simplelog = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
base64 = "0.22.1"
wry = "0.46.2"
tao = "0.29"